<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.direct.ant</groupId>
	<version>1.0.1-SNAPSHOT</version>
	<artifactId>direct-ant</artifactId>

	<!-- Create an ant's build.xml and put in src/main/resources. Create a jar file and put it in ant's lib folder. -->
	<!-- For import tasks do it: -->
	<!-- <import> <javaresource classpath="allset-config-ant.jar" name="module-build.xml" /> </import> -->
	<properties>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.release.plugin.version>2.5.3</maven.release.plugin.version>
		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
	</properties>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<url>https://github.com/fernando-romulo-silva/allset-config</url>

	<scm>
		<url>https://github.com/fernando-romulo-silva/allset-config</url>
		<connection>scm:git:https://github.com/fernando-romulo-silva/allset-config.git</connection>
		<developerConnection>scm:git:https://github.com/fernando-romulo-silva/allset-config.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven.release.plugin.version}</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<compilerArgs>
						--enable-preview
					</compilerArgs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
